--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>The Safe Place - GDR Retrocomputazionale</title>
   </head>
   <body>
     <div id="app-wrapper">
       <div id="root"></div>
-      <div id="popup-root"></div>
     </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
