--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Safe Place - GDR Retrocomputazionale</title>
+    <title>THE SAFE PLACE CHRONICLES: THE ECHO OF THE JOURNEY</title>
   </head>
   <body>
     <div id="app-wrapper">
